apps/goatlint/src/snapshots/_-c fixtures__cli__eslintrc_off__eslintrc.json fixtures__cli__eslintrc_off__test.js@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: -c fixtures/cli/eslintrc_off/eslintrc.json fixtures/cli/eslintrc_off/test.js
working directory: 
----------

  ! eslint-plugin-unicorn(no-empty-file): Empty files are not allowed.
   ,-[fixtures/cli/eslintrc_off/test.js:1:1]
   `----
  help: Delete this file or add some code to it.

Found 1 warning and 0 errors.
Finished in <variable>ms on 1 file with 126 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
